# spacex-cli

./: .gitignore  README.md  comparison.md  jobs.json  jobs_fail.json  pytest_error_v1.txt  pytest_error_v2.txt  pytest_final_v2.txt  pytest_v1_rerun.txt  pytest_v2_rerun.txt
docs/: TZ.md  (+2 more)
version1/: .env.example  .gitignore  DEVELOPMENT_SESSION_LOG.md  README.md  final_test_report.txt  pyproject.toml  ruff_v1.txt  test_all_commands.sh  test_output.txt  test_output_2.txt  test_output_3.txt  test_v1_fail.txt
version1/src/spacex_cli/api/: client.py  endpoints.py  pagination.py
version1/src/spacex_cli/cli/: __init__.py  capsules.py  company.py  export.py  launches.py  rockets.py
version1/src/spacex_cli/config/: settings.py
version1/src/spacex_cli/formatters/: csv_fmt.py  json_fmt.py  panel_fmt.py  table_fmt.py
version1/src/spacex_cli/models/: capsule.py  company.py  launch.py  rocket.py
version1/src/spacex_cli/services/: capsule_service.py  company_service.py  launch_service.py  rocket_service.py
version1/src/spacex_cli/utils/: console.py  countdown.py  errors.py
version2/: .env.example  README.md  capsule.json  comparison.md  debug_test.py  exhaustive_verif_report.txt  final_commands_report_2.txt  final_commands_report_3.txt  final_commands_report_4.txt  final_exhaustive_report.txt  final_test_report.txt  final_test_report_2.txt  final_verif_report.txt  final_verif_spacex2.txt  full_test_report.txt  launches.csv  launches.md  out.txt  out_capsules.txt  out_launches.txt  out_rockets.txt  pyproject.toml  raw_launch.json  raw_ll2_launch.json  rocket.json  ruff_v2.txt  test_commands.sh  test_limit.json  test_report.txt  test_spx_capsule_config.json  test_spx_lsp.json  test_spx_rocket.json  test_v2_fail.txt  verif_capsules.json  verif_rockets.json
version2/.github/workflows/: ci.yml
version2/docs/: api_reference.md
version2/src/spacex_cli/: __main__.py
version2/src/spacex_cli/api/: __init__.py  client.py  endpoints.py  pagination.py
(+60 files in other folders)
